Updating index.md/.html so it works.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,8 @@
 layout: archive
 ---
 
+I am currently a PhD candidate in the Hydrological Sciences program and Department of Botany at the University of Wyoming. My research is loosely organized around the fields of hydrology, ecology, and soil physics with a particular emphasis on mountain wetlands, lakes, and streams. Common tools I use to address my research interests include stable water isotopes, near-surface geophysics (e.g., GPR, NMR), process-based modeling (with an emphasis on Bayesian techniques), and remote sensing (e.g., structure from motion). I'm a big advocate of open science, and thus this site focuses a lot on those aspects of my work.
+
 {{ content }}
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
